fix: align profile name in settings

--- a/packages/frontend/src/components/Settings/styles.module.scss
+++ b/packages/frontend/src/components/Settings/styles.module.scss
@@ -166,6 +166,7 @@ $settingsHeight: 40px;
 .profileDisplayName {
   font-size: 18px;
   font-weight: 200;
+  text-align: start;
 }
 
 .profileBio {
